# webds_tutor_initial_setup

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
src/: constant.ts  handler.ts  icons.ts  index.ts  local_exports.ts
src/widget/: InitialSetupComponent.tsx  InitialSetupWidget.tsx  constant.tsx  local_exports.ts  mui_extensions  stepper.tsx  tutor_api.tsx  tutor_finish.tsx  tutor_local_cbc.tsx  tutor_max_capacitance.tsx  widget_common_chart.tsx  widget_constant.tsx  widget_control.tsx  widget_heatmap.tsx
